--- a/src/styles/NavBarStyle.css
+++ b/src/styles/NavBarStyle.css
@@ -1,3 +1,8 @@
+:root {
+    --blue: #1e90ff;
+    --white: #ffffff;
+  }
+
 .header{
     position: fixed;
     height: 100%;
@@ -25,7 +30,7 @@
 
 .header .logo .logo-img span {
     font-weight: 600;
-    color: #F94892;
+    color: --blue;
 }
 
 .header .logo .logo-img .blink {
@@ -34,14 +39,14 @@
 
 @keyframes blink {
     0% {
-        color: #F94892;
+        color: --blue;
     }
 
     50% {
         color: transparent;
     }
     100% {
-        color: #F94892;
+        color: --blue;
         
     }
 }
@@ -67,7 +72,7 @@
     cursor: pointer;
 }
 .nav-menu li .navLink:hover {
-    color: #F94892;
+    color: --blue;
 }
 
 .nav-menu li {
@@ -75,7 +80,7 @@
 }
 
 .nav-menu li:hover {
-    color: #F94892;
+    color: --blue;
     transform: scale(1.3) rotate(270deg);
 }
 
@@ -97,7 +102,7 @@
 
 .header .social-links .social:hover {
     transform: scale(1.5);
-    fill: #F94892;
+    fill: --blue;
 }
 
 
