--- a/src/styles/AboutStyle.css
+++ b/src/styles/AboutStyle.css
@@ -1,8 +1,3 @@
-:root {
-    --blue: #1e90ff;
-    --white: #ffffff;
-  }
-  
 .about-container {
     display: flex;
     margin: 80px 13vw 0 18vw;
@@ -19,7 +14,7 @@
     font-size: 22px;
     font-weight: 600;
     margin-top: 100px;
-    color: --blue;
+    color: #1e90ff;
 }
 
 .profile-photo .img {
@@ -34,14 +29,14 @@
     padding-top: 75px;
     width: 110px;
     overflow-wrap: break-word;
-    color: --blue;
+    color: #1e90ff;
     text-transform: uppercase;
     z-index: 0;
     font-size: 100px;
     font-family: 'Intro', sans-serif;
     font-weight: 800;
     text-transform: uppercase;
-    background: -webkit-linear-gradient(-86deg, #ffe1a0  5%, #f67280 53%, --blue 91%);
+    background: -webkit-linear-gradient(-86deg, #ffe1a0  5%, #f67280 53%, #1e90ff 91%);
     -webkit-background-clip: text;
     -webkit-text-stroke: 4px transparent;
     background-clip: text;
@@ -57,7 +52,7 @@
 }
 
 .aboutMe-text span {
-    color: --blue;
+    color: #1e90ff;
 }
 
 .about-container .aboutMe-text h3 {
@@ -68,8 +63,8 @@
 }
 
 .about-container .aboutMe-text .resume {
-    color: --blue;
-    border-bottom: 2.5px solid --blue;
+    color: #1e90ff;
+    border-bottom: 2.5px solid #1e90ff;
     transition: all 0.3s ease-in-out;
     display: inline-block;
     font-weight: 800;
