--- a/src/styles/HomeBannerStyle.css
+++ b/src/styles/HomeBannerStyle.css
@@ -1,8 +1,3 @@
-:root {
-    --blue: #1e90ff;
-    --white: #ffffff;
-  }
-  
 .home .content {
     height: 100vh;
     display: flex;
@@ -58,7 +53,7 @@
     z-index: -1;
 }
 
-@keyframes slider {
+/* @keyframes slider {
     0%   {width: 0%; }
     50% {width: 42%; }
     100% {width: 0%;}
@@ -67,11 +62,11 @@
 @keyframes fadeText {
     0%   {opacity: 0;}
     100% {opacity: 0;}
-}
+} */
 
   .home .content .dynamicTitle li span {
     white-space: wrap;
-    background-image: linear-gradient(to right, #ffe1a0, #f67280, --blue);
+    background-image: linear-gradient(to right, #ccfcff, #72ebf6, #1e90ff);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     z-index: -1;
