--- a/src/styles/NavBarStyle.css
+++ b/src/styles/NavBarStyle.css
@@ -1,8 +1,3 @@
-:root {
-    --blue: #1e90ff;
-    --white: #ffffff;
-  }
-
 .header{
     position: fixed;
     height: 100%;
@@ -30,7 +25,7 @@
 
 .header .logo .logo-img span {
     font-weight: 600;
-    color: --blue;
+    color: #1e90ff;
 }
 
 .header .logo .logo-img .blink {
@@ -39,14 +34,14 @@
 
 @keyframes blink {
     0% {
-        color: --blue;
+        color: #1e90ff;
     }
 
     50% {
         color: transparent;
     }
     100% {
-        color: --blue;
+        color: #1e90ff;
         
     }
 }
@@ -72,7 +67,7 @@
     cursor: pointer;
 }
 .nav-menu li .navLink:hover {
-    color: --blue;
+    color: #1e90ff;
 }
 
 .nav-menu li {
@@ -80,7 +75,7 @@
 }
 
 .nav-menu li:hover {
-    color: --blue;
+    color: #1e90ff;
     transform: scale(1.3) rotate(270deg);
 }
 
@@ -102,7 +97,7 @@
 
 .header .social-links .social:hover {
     transform: scale(1.5);
-    fill: --blue;
+    fill: #1e90ff;
 }
 
 
