--- a/src/styles/HomeBannerStyle.css
+++ b/src/styles/HomeBannerStyle.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    padding-left: 22vw;
-    margin-bottom: 50px;
+    padding-left: 18vw;
+    margin-bottom: -100px;
 }
 
 .home .content .wrapper {
@@ -53,7 +53,7 @@
     z-index: -1;
 }
 
-/* @keyframes slider {
+@keyframes slider {
     0%   {width: 0%; }
     50% {width: 42%; }
     100% {width: 0%;}
@@ -62,7 +62,7 @@
 @keyframes fadeText {
     0%   {opacity: 0;}
     100% {opacity: 0;}
-} */
+}
 
   .home .content .dynamicTitle li span {
     white-space: wrap;
