--- a/src/styles/SkillCardStyle.css
+++ b/src/styles/SkillCardStyle.css
@@ -1,10 +1,10 @@
 .skill-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     padding-top: 50px;
-    margin: 50px 7vw 0px 15vw;
+    margin: 70px 7vw 0px 15vw;
 }
 
 .skill-container .skill-header {
