--- a/src/styles/HomeBannerStyle.css
+++ b/src/styles/HomeBannerStyle.css
@@ -40,7 +40,38 @@
     width: 20vw;
 }
 
-.home .content .dynamicTitle {
+/* .Typewriter {
+    font-size: 100px;
+    font-weight: 500;
+    line-height: 100px;
+    width: fit-content;
+    width: 100%;
+    z-index: -1;
+    white-space: wrap;
+    background-image: linear-gradient(to right, #ccfcff, #1e90ff);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: -1;
+} */
+
+.Typewriter {
+    font-size: 100px;
+    font-weight: 500;
+    line-height: 100px;
+    width: fit-content;
+    white-space: nowrap;
+    /* Gradient setup */
+    background-color: #ccfcff; /* Fallback color */
+    background-image: linear-gradient(to right, #ccfcff, #72ebf6, #1e90ff);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+/* .home .content .dynamicTitle {
     font-size: 100px;
     font-weight: 500;
     line-height: 100px;
@@ -51,7 +82,7 @@
 .home .content .dynamicTitle li {
     width: 100%;
     z-index: -1;
-}
+} */
 
 @keyframes slider {
     0%   {width: 0%; }
@@ -64,7 +95,7 @@
     100% {opacity: 0;}
 }
 
-  .home .content .dynamicTitle li span {
+  /* .home .content .dynamicTitle li span {
     white-space: wrap;
     background-image: linear-gradient(to right, #ccfcff, #72ebf6, #1e90ff);
     background-clip: text;
@@ -77,7 +108,7 @@
     width: 100%;
     height: 20%;
     z-index: -1;
-  }
+  } */
 
 .mask .bg {
     height: 80vh;
@@ -122,6 +153,11 @@
     }
 
     .home .content .dynamicTitle {
+        font-size: 12vw;
+        line-height: 60px;
+    }
+
+    .Typewriter {
         font-size: 12vw;
         line-height: 60px;
     }
