revamping projects card

--- a/src/styles/HomeBannerStyle.css
+++ b/src/styles/HomeBannerStyle.css
@@ -40,28 +40,13 @@
     width: 20vw;
 }
 
-/* .Typewriter {
-    font-size: 100px;
-    font-weight: 500;
-    line-height: 100px;
-    width: fit-content;
-    width: 100%;
-    z-index: -1;
-    white-space: wrap;
-    background-image: linear-gradient(to right, #ccfcff, #1e90ff);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    z-index: -1;
-} */
-
 .Typewriter {
     font-size: 100px;
     font-weight: 500;
     line-height: 100px;
     width: fit-content;
     white-space: nowrap;
-    /* Gradient setup */
-    background-color: #ccfcff; /* Fallback color */
+    background-color: #ccfcff; 
     background-image: linear-gradient(to right, #ccfcff, #72ebf6, #1e90ff);
     background-size: 100%;
     -webkit-background-clip: text;
